define last.left 0 when undefined

--- a/impetus-scroller.html
+++ b/impetus-scroller.html
@@ -229,6 +229,9 @@ Momentum scroller using impetus
           }.bind(this));
 
           var last = layout[layout.length - 1];
+          if(last.left === undefined){
+            last.left = 0;
+          }
           this._totalWidth = last.left + last.width;
           this.$.container.style.width = this._totalWidth + 'px';
 
