--- a/impetus-scroller.html
+++ b/impetus-scroller.html
@@ -230,7 +230,7 @@ Momentum scroller using impetus
 
           var last = layout[layout.length - 1];
           if(last.left === undefined){
-            last.left = 0;
+            return 0;
           }
           this._totalWidth = last.left + last.width;
           this.$.container.style.width = this._totalWidth + 'px';
